--- a/mixxx/res/translations/mixxx/es.po
+++ b/mixxx/res/translations/mixxx/es.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: mixxx\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-10-28 15:35-0400\n"
-"PO-Revision-Date: 2010-12-20 23:48+0000\n"
+"PO-Revision-Date: 2010-12-28 04:08+0000\n"
 "Last-Translator: Fitoschido <Unknown>\n"
 "Language-Team: Spanish <es@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-12-21 13:25+0000\n"
+"X-Launchpad-Export-Date: 2010-12-28 04:36+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: AutoDJFeature#1
@@ -320,7 +320,7 @@ msgstr "Habilitar la detección de GPM"
 
 #: DlgPrefBPMDlg#4
 msgid "Detect Song BPM on Import"
-msgstr ""
+msgstr "Detectar GMP de la canción al importar"
 
 #: DlgPrefBPMDlg#5
 msgid "Write BPM to ID3 Tag"
@@ -441,11 +441,11 @@ msgstr ""
 
 #: DlgPrefControlsDlg#14
 msgid "Left click"
-msgstr ""
+msgstr "Clic izquierdo"
 
 #: DlgPrefControlsDlg#15
 msgid "Right click"
-msgstr ""
+msgstr "Clic derecho"
 
 #: DlgPrefControlsDlg#16
 msgid "Permanent rate change (between 1 and 8000) when left clicking"
@@ -577,6 +577,9 @@ msgid ""
 "Your settings must be applied before starting the MIDI learning wizard.\n"
 "Apply settings and continue?"
 msgstr ""
+"Debe aplicar sus configuraciones antes de iniciar el asistente de "
+"aprendizaje de MIDI.\n"
+"¿Aplicar configuraciones y continuar?"
 
 #: DlgPrefMidiBindings#4
 msgid "Overwrite existing mapping?"
@@ -627,7 +630,7 @@ msgstr "Diálogo"
 
 #: DlgPrefMidiBindingsDlg#2
 msgid "Your Device Name"
-msgstr ""
+msgstr "Nombre de su dispositivo"
 
 #: DlgPrefMidiBindingsDlg#3
 msgid "Load Preset:"
@@ -643,7 +646,7 @@ msgstr "Salida:"
 
 #: DlgPrefMidiBindingsDlg#6
 msgid "Enabled"
-msgstr ""
+msgstr "Activado"
 
 #: DlgPrefMidiBindingsDlg#7
 msgid "Controls"
@@ -696,7 +699,7 @@ msgstr ""
 
 #: DlgPrefPlaylist#2
 msgid "Multiple iPods Detected"
-msgstr ""
+msgstr "Se detectaron varios iPod"
 
 #: DlgPrefPlaylist#3
 msgid ""
@@ -737,7 +740,7 @@ msgstr "iPod"
 
 #: DlgPrefPlaylistDlg#3
 msgid "iPod mountpoint"
-msgstr ""
+msgstr "Punto de montaje de iPod"
 
 #: DlgPrefPlaylistDlg#4
 msgctxt "DlgPrefPlaylistDlg#4"
@@ -790,7 +793,7 @@ msgstr ""
 #: DlgPrefRecord#1
 msgctxt "DlgPrefRecord#1"
 msgid "Save Recording As..."
-msgstr ""
+msgstr "Guardar grabación como..."
 
 #: DlgPrefRecord#2
 msgid "kbps"
@@ -863,7 +866,7 @@ msgstr ""
 
 #: DlgPrefShoutcastDlg#3
 msgid "Server connection"
-msgstr ""
+msgstr "Conexión al servidor"
 
 #: DlgPrefShoutcastDlg#4
 msgctxt "DlgPrefShoutcastDlg#4"
